--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^4.2.0",
     "pinia-plugin-persistedstate": "^3.2.0",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "unplugin-auto-import": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
