--- a/experiment-management-server/src/main/resources/application.properties
+++ b/experiment-management-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/experiment-api
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:8.222.176.242}:10003/experiment-api
+spring.datasource.username=experiment-api
+spring.datasource.password=isBZeCFBT7eC5yGb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
